apps/k8s-web-app-php/k8s/overlays/prod/ingress.yaml
# infrastructure-repo/apps/app1/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-web-app-php
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging" # Use staging for testing, then switch to prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - app-prod.gitops.local
    secretName: k8s-web-app-php-prod-tls
  rules:
  - host: app-prod.gitops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-web-app-php
            port:
              number: 80
